# Thesis

./: .gitignore  ActivityDiagram.drawio  Agent.cpp  Agent.h  AgentManager.h  Agents.cpp  Agents.h  CMakeLists.txt  Class Diagram.drawio  CollisionListener.cpp  ConfigManager.py  DataAnalysis.py  Game.cpp  Game.h  GameManeuver.h  GameManeuvers.h  GameTactic.h  GameTactics.h  Notes.txt  PhysicsEngine.cpp  PhysicsEngine.h  RenderingEngine.cpp  RenderingEngine.h  Screen.cpp  Screen.h  Untitled Diagram.drawio  main.cpp  main2.cpp
Configs/: agents.csv  colors.csv  settings.csv
Data/: agentdata 0.csv  agentdata 13.csv  agentdata 14.csv  agentdata 3.csv  gamedata 0.csv  gamedata 1.csv  gamedata 14.csv  gamesettings.csv  history.csv  historydata 0.csv  historydata 1.csv  historydata 10.csv  historydata 11.csv  historydata 12.csv  historydata 13.csv  historydata 2.csv  historydata 3.csv  historydata 5.csv  historydata 7.csv  historydata 8.csv
Extra/: PhysicsEngine.cpp  PhysicsEngine.h
Old/: Agent.h  Game.h  GameManeuver.h  GameManeuvers.h  GameTactics.h  Screen.cpp  World.h  testing
Old 2/: Agent.h  CollisionListener.cpp  Game.cpp  GameManeuver.h  GameManeuvers.h  GameTactic.h  History.h  main.cpp
